# quarri

./: Cargo.toml  README.md  install_linux.sh  launch_quartus.sh  quartus-dark-linux.code-workspace
crates/inject/: Cargo.toml
crates/launcher/: Cargo.toml
crates/launcher/src/: launch.rs  main.rs  platform.rs  scanner.rs  state.rs  theme.rs
crates/launcher/src/ui/: installs_panel.rs  log_panel.rs  logger_panel.rs  mod.rs  settings_panel.rs  splash.rs  terminal_panel.rs  top_bar.rs
inject/: Cargo.toml
launcher/: Cargo.toml
launcher/src/: launch.rs  state.rs
launcher/src/ui/: installs_panel.rs  mod.rs  settings_panel.rs  top_bar.rs
