[package]
name = "quarri-workspace"
version = "0.1.0"
edition = "2024"
description = "QuarRI™ — dark-themed launcher for Intel Quartus Prime on Linux"
license = "MPL-2.0"
repository = "https://github.com/atlantix-eda/quarri"
authors = ["James Bonanno <atlantix-eda@proton.me>"]

[workspace]
members = ["crates/inject", "crates/launcher"]
default-members = ["crates/launcher"]
resolver = "2"

[[bin]]
name = "quarri"
path = "crates/launcher/src/main.rs"

[dependencies]
eframe = "0.32"
egui = "0.32"
egui_dock = "0.17.0"
egui_mobius_reactive = "=0.3.0-alpha.32"
egui_lens = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"

[profile.release]
opt-level = 2
strip = true

[profile.release.package.qss_inject]
opt-level = "s"
