[package]
name = "quarri"
version = "0.1.0"
edition = "2024"
description = "QuarRI — dark-themed launcher for Intel Quartus Prime on Linux"
license = "MPL-2.0"
repository = "https://github.com/atlantix-eda/quarri"
authors = ["James Bonanno <atlantix-eda@proton.me>"]
keywords = ["quartus", "fpga", "dark-theme", "egui", "launcher"]
categories = ["gui", "development-tools"]

[[bin]]
name = "quarri"
path = "src/main.rs"

[dependencies]
eframe = "0.32"
egui = "0.32"
egui_dock = "0.17.0"
egui_mobius_reactive = "=0.3.0-alpha.32"
egui_lens = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
